--- a/hugo.toml
+++ b/hugo.toml
@@ -1,11 +1,12 @@
 baseURL = 'https://example.org/'
-theme = 'Relearn'
+languageCode = 'en-us'
+theme = 'Stack'
 
 title = "Apihte's Site"
 
-defaultContentLanguage = "zh-cn"
-languageCode = 'zh-CN'
-languageName = '简体中文'
+# defaultContentLanguage = "zh-cn"
+# languageCode = 'zh-cn'
+# languageName = '简体中文'
 
 # 是否包括中日韩文字
 hasCJKLanguage = true
